<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">一起wifi</string>
	<string name="wifi_progressbar_text">配置中请保持</string>
    <string name="wifi_progressbar_text_receive_1">根据手机的性能，连接过程从3秒到15秒不等，请耐心等待。</string>
	<string name="wifi_progressbar_text_receive_2">连接建立和播放广告时请勿退出软件，会造成连接失败</string>
    
	<string name="app_setting_text_connect_sound">打开连接提示声音</string>
	<string name="app_setting_text_ad_sound">打开广告播放声音</string>
	
    <string name="sponsor_line1">Android彩票宝</string>
    <string name="sponsor_line2">实名注册送5元彩金</string>
	<string name="sponsor_url">http://data.cpbao.com/cpbao_lch.apk?.source=wifi4us</string>
    
    <string name="receive_string_switcher_text_on">打开</string>
    <string name="receive_string_switcher_text_off">关闭</string>
    <string name="receive_string_switcher_button">Wifi开关</string>
    <string name="receive_string_start_scan_button">搜索周边的智能热点</string>
    <string name="receive_string_start_scan_nothing">没找到打开的智能热点</string> 
    <string name="receive_string_start_scan_text_openwifi">请打开wifi开关</string>   
    <string name="receive_string_ad_sound_button">声音开关</string>   
    <string name="receive_string_disconnect_wifi">断开连接</string>   
    <string name="receive_text_state_unit">KB</string>
    <string name="receive_text_state_startwork">已经使用</string>
    <string name="receive_text_notice">本软件只有广告第一次下载时，消耗约900KB的来自智能热点的流量，以后每次使用时的广告播放均不额外消耗流量，如果您的智能热点流量使用过快，请您检查您手机上的其他应用。</string>
    
    <string name="send_button_start_share">点击建立智能wifi热点</string>
    <string name="send_checkbox">3G可以要求对方收看广告，获取积分换彩票</string>
    <string name="send_radio_button_30">分享5M流量，只有一人能接入</string>
    <string name="send_radio_button_60">分享10M流量，只有一人能接入</string>
    <string name="send_radio_button_unlimit">不限制流量，可多人接入，无法插播广告</string>
            
    <string name="send_text_start_share">点击建立智能热点，采用安全的动态密码机制，只有安装了一起wifi的客户端才能接入</string>
    <string name="send_text_stop_share">创建完成，安装了一起wifi的客户端才能发现并接入你的智能热点，流量到达上限会自动断网</string>
    <string name="send_button_stop_share">手动关闭热点</string>
    <string name="send_text_start_fail">建立热点失败，某些android系统ROM存在漏洞，请退出软件重试或重启手机</string>
    <string name="send_text_state_unit">KB</string>
    <string name="send_text_state_startwork">已经分享</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_versioin">版本</string>
    <string name="clear_cache">清除缓存</string>
    <string name="binary_code">刷二维码下载本软件</string>
    <string name="help">帮助</string>
    <string name="check_update">检查更新</string>
    <string name="update_dialog_title">版本更新</string>
    <string name="update_dialog_content">正在下载最新版本...</string>
    <string name="feedback">反馈</string>
    <string name="about">关于我们</string>
    <string name="quit">退出</string>
    <string name="agreement">用户协议</string>
    <string name="settings">用户设置</string>
    <string name="setDiscuss">分享有奖</string>
    <string name="setScore">好评有礼</string>
    <string name="version">当前版本</string>
    <string name="unknow_user">未知用户</string>
    <string name="no_user_name">积分</string>
    <string name="title_more">更多</string>
    <string name="setting_1">设置1</string>
    <string name="setting_2">设置2</string>
    <string name="feekback_type">您的反馈类型：</string>
    <string name="feedback_propose_title">建议：</string>
    <string name="feedback_other_title">联系方式：</string>
    <string name="send_feedback">反馈给我们</string>
    <string name="webview_back">返回</string>
    <string name="title_activity_settings">应用设置</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="exchange">积分换彩票</string>

    <string name="main_activity_tabwidget_sendtext">建立热点</string>
	<string name="main_activity_tabwidget_receivetext">搜寻</string>
	<string name="main_activity_tabwidget_othertext">更多</string>
	<string name="main_activity_update_latest_already">已经是最新版本</string>
	<string name="main_activity_update_nowifi">没有wifi连接，只在wifi下更新</string>
	<string name="main_activity_update_fail">更新失败，请检查网络连接</string>
	
	<string name="main_activity_onkeydown_warning">再按一次退出</string>
	
	<string name="main_activity_share_unfinished">分享未完成</string>
	<string name="main_activity_share_fail">分享失败</string>
	<string name="main_activity_share_success">分享成功，获得1积分奖励</string>
	<string name="main_activity_share_success_once">分享成功，每天只获得一次积分奖励</string>	
	<string name="main_activity_share_error">分享成功，服务器错误</string>	

	<string name="main_activity_otherfragment_useridtext">你的id为：</string>
	<string name="main_activity_otherfragment_useridtext_initfail">用户id获取失败</string>
	<string name="main_activity_otherfragment_credittext">你的积分为：</string>
	<string name="main_activity_social_share_content">#流量月底不清零#流量用不完？便宜了谁也不能便宜移动！流量不够用？赶紧找小伙伴要把，买啥流量包！“一起wifi”，全球首款带积分奖励和流量限制的手机个人wifi热点管理工具。把你的手机变成智能wifi热点，分享流量给小伙伴们获取积分。@一起wifi</string>
	
	<string name="lottery_tab_1">兑换</string>
	<string name="lottery_tab_2">购彩记录</string>
	<string name="lottery_tab_3">实名信息</string>
	<string name="lottery_info_period">期次</string>
	<string name="lottery_info_ticket_id">识别码</string>
	<string name="lottery_info_program">方案</string>
	<string name="lottery_info_state">状态</string>
	<string name="lottery_info_trade_id">交易号</string>
	<string name="no_history">无彩票记录</string>
	<string name="redball">红球</string>
	<string name="blueball">蓝球</string>
	<string name="lottery_state_0">申购成功</string>
	<string name="lottery_state_2">出票成功</string>
	<string name="lottery_state_3">出票失败</string>
	<string name="lottery_state_4">奖金xxx元</string>
	<string name="lottery_state_5">未中奖</string>
	<string name="lottery_state_6">已派奖</string>
    <string name="lottery_state_7">正在派奖</string>
	<string name="lottery_state_unknow">未知</string>
	<string name="lottery_more">获取最新购买记录</string>
	
	<string name="lottery_history_dialog_title">查询彩票</string>
	<string name="lottery_history_dialog_content">正在查询，请稍等...</string>
	<string name="lottery_plate_dialog_title">兑换彩票</string>
	<string name="lottery_plate_dialog_content">正在兑换，请稍等...</string>
			
	<string name="lottery_pref_username_dialogTitle">请输入真实姓名</string>
	<string name="lottery_pref_username_summery">用于兑大额奖金的真实姓名</string>
	<string name="lottery_pref_username_title">姓名</string>
	
	<string name="lottery_pref_id_dialogTitle">请输入证件号码</string>
	<string name="lottery_pref_id_summery">用于兑换大额奖金的有效证件</string>
	<string name="lottery_pref_id_title">身份证</string>
	
	<string name="lottery_pref_phone_dialogTitle">请输入电话号码</string>
	<string name="lottery_pref_phone_summery">通知您兑换大额奖金的联系方式</string>
	<string name="lottery_pref_phone_title">联系电话</string>
	
	<string name="lottery_pref_alipay_dialogTitle">请输入支付宝号码</string>
	<string name="lottery_pref_alipay_summery">小额奖金直接打入您的支付宝</string>
	<string name="lottery_pref_alipay_title">支付宝</string>
			
</resources>
