<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/send_button_start_share"
		android:id="@+id/send_button_start_share"     
		android:background="@drawable/button_shape"/>
    
	<CheckBox android:id="@+id/send_checkbox"
		android:text="@string/send_checkbox"
		android:checked="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
	
	<RadioGroup  
        android:id="@+id/send_radio_group"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:orientation="vertical">
        <RadioButton  
            android:id="@+id/send_radio_button_30"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:checked="true"
            android:text="@string/send_radio_button_30"/>  
        <RadioButton  
            android:id="@+id/send_radio_button_60"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/send_radio_button_60"/>  
        <RadioButton  
            android:id="@+id/send_radio_button_unlimit"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/send_radio_button_unlimit"/>  
    </RadioGroup> 
    
</LinearLayout>
