<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="12dip"
        android:paddingRight="12dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/feekback_type"
            android:textColor="#FF101010"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/view_feedback_msg"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:background="@drawable/edit_text_grey_bg"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/feedback_propose_title"
            android:textColor="#FF101010"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/view_feedback_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_text_grey_bg"
            android:hint="@string/feedback_other_title"
            android:textColor="#FF101010"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_send_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/edit_text_grey_bg"
            android:text="@string/send_feedback" />
    </LinearLayout>

</ScrollView>