<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	style="@style/topView"
    android:orientation="vertical" > 

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:paddingBottom="10.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="15.0dip"
        android:paddingTop="10.0dip"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item_alone"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imgV_baidu_head_login"
                    android:layout_width="60.0dip"
                    android:layout_height="60.0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="6.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/baidu_head" />
				<LinearLayout
                	android:layout_width="match_parent"
                	android:layout_height="match_parent"
                	android:layout_gravity="center_vertical"
                	android:layout_marginLeft="40dip"
                	android:gravity="center_vertical|"
                	android:orientation="vertical" >
                	<TextView
                    	android:id="@+id/other_id_userid"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="left"
                    	android:layout_marginLeft="6.0dip"
                   		android:gravity="center"
                    	android:text="@string/unknow_user"
                    	android:textSize="16.0sp" />

                		<TextView
                    		android:id="@+id/other_id_credits"
                    		android:layout_width="wrap_content"
                    		android:layout_height="wrap_content"
                    		android:layout_marginLeft="5sp"
                    		android:layout_gravity="left"
                    		android:gravity="center"
                    		android:text="@string/no_user_name"
                    		android:textSize="12.0sp" />
            	</LinearLayout>
			</LinearLayout>
			

            <RelativeLayout
                android:id="@+id/btn_exchange"
				android:layout_marginTop="10.0dip"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/exchange"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_Set_Score"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/setScore"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_Set_Discuss"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/setDiscuss"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_settings"
				style="@style/otherElement"
                android:layout_marginTop="10.0dip"
                android:clickable="true"
                android:visibility="visible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/settings"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_agreement"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/agreement"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_help"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/help"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

			<RelativeLayout
                android:id="@+id/btn_verison"
				style="@style/otherElement"
                android:layout_marginTop="10.0dip"
                android:clickable="true" >

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/version"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/btn_check_update"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/check_update"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>
            
			<RelativeLayout
                android:id="@+id/btn_clear_cache"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/clear_cache"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>
			<RelativeLayout
                android:id="@+id/btn_binary_code"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/binary_code"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_feed_back"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/feedback"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_about"
				style="@style/otherElement"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/about"
                    android:textColor="#ff323232"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_quit"
				style="@style/otherElement"
                android:layout_marginTop="10.0dip"
                android:background="#ff0000"
                
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/quit"
                    android:textColor="#ffffff"
                    android:textSize="18.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
